# Revolumetric

./: .gitignore  Cargo.toml  README.md  build.rs
assets/shaders/: fullscreen.vert  shadow_trace.slang
assets/shaders/passes/: lighting.slang  postprocess.slang  primary_ray.slang  rc_merge.slang  rc_trace.slang  restir_di_initial.slang  restir_di_spatial.slang  restir_di_temporal.slang  test_pattern.slang  vpt.slang
assets/shaders/shared/: gbuffer_common.slang  legacy_common.glsl  lighting.slang  lighting_common.slang  material_common.slang  math.slang  radiance_cascade.slang  ray.slang  scene_common.slang  (+7 more)
reference/shadertoy_M3ycWt/: shader_info.json
reference/shadertoy_WdlyWs/: buffer.glsl  common.glsl  cubemap.glsl  image.glsl
src/: app.rs  lib.rs  main.rs
src/assets/: hot_reload.rs  mod.rs  shader_compiler.rs  shader_reflect.rs
src/ecs/: archetype.rs  column.rs  commands.rs  entity.rs  mod.rs  query.rs  resource.rs  schedule.rs  system.rs  world.rs
src/platform/: input.rs  time.rs  window.rs
src/render/: allocator.rs  buffer.rs  camera.rs  descriptor.rs  device.rs  frame.rs  gpu_profiler.rs  graph.rs  image.rs  mod.rs  pass_context.rs  pipeline.rs  rc_probe_buffer.rs  resource.rs  restir_di.rs  sampler.rs  scene_trace_backend.rs  scene_ubo.rs  shader.rs  swapchain.rs  traversal_stats.rs
src/scene/: camera.rs  components.rs  light.rs  mod.rs  systems.rs
src/voxel/: brick.rs  brick_pool.rs  chunk.rs  generator.rs  gpu_upload.rs  grid.rs  material.rs  mod.rs  morton.rs  occupancy.rs  radiance_layout.rs  scene_baker.rs  sponza_generator.rs  ucvh.rs
(+40 files in other folders)
